expand list of headers not to sign based on some review of requests
untested and not-wired-up code to enumerateSignedHeaders() from an auth response.